[package]
authors = []
edition = "2021"
name = "xhayper-discord-game-sdk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.11.0", default-features = false, features = ["napi4"] }
napi-derive = "2.10.1"
discord-sdk = "0.3.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
